Show Amap static map preview for selected stores
