# docs/openapi-consumer.json
@@ -1798,6 +1798,43 @@
         }
       }
     },
+    "/api/place-map": {
+      "get": {
+        "summary": "Place Map",
+        "operationId": "place_map_api_place_map_get",
+        "parameters": [
+          {
+            "name": "location",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "maxLength": 50,
+              "pattern": "^\\d{1,3}(?:\\.\\d+)?,\\d{1,2}(?:\\.\\d+)?$",
+              "title": "Location"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "image/png": {}
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/legal-entities": {
       "get": {
         "summary": "Legal Entities",
